// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareButton Snapshop test for SMS ShareButton with a video 1`] = `
<div class="share-button flex flex-col"><a href="sms:?&amp;body=has video" class="is-rounded text-white shadow hover:text-white flex items-center justify-center w-12 h-12 rounded-full mx-auto cursor-pointer lg:hidden has-background-text-message">
    <fontawesomeicon-stub icon="comment" class="text-2xl"></fontawesomeicon-stub>
  </a>
  <!----> <span class="text-sm lg:hidden">sms button</span> <button class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-text-message">
    <fontawesomeicon-stub icon="comment" class="text-2xl mr-2"></fontawesomeicon-stub> <span>sms button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for SMS ShareButton without a video 1`] = `
<div class="share-button flex flex-col"><a href="sms:?&amp;body=no video" class="is-rounded text-white shadow hover:text-white flex items-center justify-center w-12 h-12 rounded-full mx-auto cursor-pointer lg:hidden has-background-text-message">
    <fontawesomeicon-stub icon="comment" class="text-2xl"></fontawesomeicon-stub>
  </a>
  <!----> <span class="text-sm lg:hidden">sms button</span> <button class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-text-message">
    <fontawesomeicon-stub icon="comment" class="text-2xl mr-2"></fontawesomeicon-stub> <span>sms button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for email ShareButton with a video 1`] = `
<div class="share-button flex flex-col">
  <!----> <button class="lg:hidden flex items-center justify-center w-12 h-12 mx-auto text-white hover:text-white rounded-full shadow cursor-pointer has-background-email">
    <fontawesomeicon-stub icon="envelope" class="text-2xl"></fontawesomeicon-stub> <span class="hidden lg:inline">easy emailer button</span>
  </button> <span class="text-sm lg:hidden">easy emailer button</span> <button class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-email">
    <fontawesomeicon-stub icon="envelope" class="text-2xl mr-2"></fontawesomeicon-stub> <span>easy emailer button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for email ShareButton without a video 1`] = `
<div class="share-button flex flex-col">
  <!----> <button class="lg:hidden flex items-center justify-center w-12 h-12 mx-auto text-white hover:text-white rounded-full shadow cursor-pointer has-background-email">
    <fontawesomeicon-stub icon="envelope" class="text-2xl"></fontawesomeicon-stub> <span class="hidden lg:inline">easy emailer button</span>
  </button> <span class="text-sm lg:hidden">easy emailer button</span> <button class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-email">
    <fontawesomeicon-stub icon="envelope" class="text-2xl mr-2"></fontawesomeicon-stub> <span>easy emailer button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for facebook ShareButton with a video 1`] = `
<div class="share-button flex flex-col">
  <!----> <button class="lg:hidden flex items-center justify-center w-12 h-12 mx-auto text-white hover:text-white rounded-full shadow cursor-pointer has-background-facebook">
    <fontawesomeicon-stub icon="fab,facebook-f" class="text-2xl"></fontawesomeicon-stub> <span class="hidden lg:inline">facebook button</span>
  </button> <span class="text-sm lg:hidden">facebook button</span> <button class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-facebook">
    <fontawesomeicon-stub icon="fab,facebook-f" class="text-2xl mr-2"></fontawesomeicon-stub> <span>facebook button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for facebook ShareButton without a video 1`] = `
<div class="share-button flex flex-col">
  <!----> <button class="lg:hidden flex items-center justify-center w-12 h-12 mx-auto text-white hover:text-white rounded-full shadow cursor-pointer has-background-facebook">
    <fontawesomeicon-stub icon="fab,facebook-f" class="text-2xl"></fontawesomeicon-stub> <span class="hidden lg:inline">facebook button</span>
  </button> <span class="text-sm lg:hidden">facebook button</span> <button class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-facebook">
    <fontawesomeicon-stub icon="fab,facebook-f" class="text-2xl mr-2"></fontawesomeicon-stub> <span>facebook button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for link ShareButton with a video 1`] = `
<div class="share-button flex flex-col">
  <!----> <button data-tooltip="Copied!" title="Copied!" class="lg:hidden flex items-center justify-center w-12 h-12 mx-auto text-white hover:text-white rounded-full shadow cursor-pointer has-background-copy-link copy-text">
    <fontawesomeicon-stub icon="link" class="text-2xl"></fontawesomeicon-stub> <span class="hidden lg:inline">copy and share button</span>
  </button> <span class="text-sm lg:hidden">copy and share button</span> <button data-tooltip="Copied!" title="Copied!" class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-copy-link copy-text">
    <fontawesomeicon-stub icon="link" class="text-2xl mr-2"></fontawesomeicon-stub> <span>copy and share button</span>
  </button></div>
`;

exports[`ShareButton Snapshop test for link ShareButton without a video 1`] = `
<div class="share-button flex flex-col">
  <!----> <button data-tooltip="Copied!" title="Copied!" class="lg:hidden flex items-center justify-center w-12 h-12 mx-auto text-white hover:text-white rounded-full shadow cursor-pointer has-background-copy-link copy-text">
    <fontawesomeicon-stub icon="link" class="text-2xl"></fontawesomeicon-stub> <span class="hidden lg:inline">copy and share button</span>
  </button> <span class="text-sm lg:hidden">copy and share button</span> <button data-tooltip="Copied!" title="Copied!" class="hidden lg:flex justify-center px-2 py-2 font-semibold text-xl text-white hover:text-white rounded-full shadow cursor-pointer focus:outline-none focus:shadow-outline has-background-copy-link copy-text">
    <fontawesomeicon-stub icon="link" class="text-2xl mr-2"></fontawesomeicon-stub> <span>copy and share button</span>
  </button></div>
`;
